[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Ship.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Shot.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.7457
height = 13.3997

[node name="Player" type="Area2D"]
position = Vector2( 283.515, 160.792 )
collision_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="Firepoint" type="Node2D" parent="."]
position = Vector2( 17.6071, -0.248505 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.155
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
